[add] structure and css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <title>Campominato Grid</title>
 </head>
 <body>
+  <div class="main-wrapper">
+    <div class="container">
+      <button id="btn-start">START</button>
+    </div>
+  </div>
   
   <script src="js/script.js"></script>
 </body>
